# ParallelTreeTemplate

./: .gitignore  .gitpod.yml  README.md  compile_flags.txt
.theia/: settings.json
example/: Makefile  TreeNode.hpp  main.cpp
example/parallel_Makefile/: Makefile  NumericResult.hpp  TreeParams.hpp  main.cpp
example/sequential_Makefile/: Makefile  main.cpp
gurova_rekursia/: Header.h  gurova_rekursia.sln  gurova_rekursia.vcxproj  gurova_rekursia.vcxproj.filters  main.cpp  test.txt
include/: ParallelTree.hpp
lib/Windows_x86/: ParallelTree.lib  libParallelTree.lib
lib/Windows_x86_64/: libParallelTree.lib
proba/: Header.h  Source.cpp  proba.sln  proba.vcxproj  test.txt
proba/Debug/: proba.exe.recipe  proba.ilk  proba.vcxproj.FileListAbsolute.txt  test_gurova_ochered.exp  test_gurova_ochered.ilk  test_gurova_ochered.lib  vc142.idb
proba/Debug/proba.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  proba.lastbuildstate
test_gurova_ochered/: test_gurova_ochered.cpp  test_gurova_ochered.vcxproj  test_gurova_ochered.vcxproj.filters
test_gurova_ochered/Debug/: test_gurova_ochered.dll.recipe  test_gurova_ochered.pch  vc142.idb
test_gurova_ochered/Debug/test_gur.E768CF96.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.14360.delete.1.tlog  (+10 more)
test_rekursia/: test_rekursia.cpp  test_rekursia.vcxproj  test_rekursia.vcxproj.filters
tree_example/: CMakeLists.txt  build_all.sh  main.cpp
vector_example/: CMakeLists.txt  Makefile  main.cpp
vs_example/: ParallelTreeExample.sln
vs_example/ParallelTreeExample/: ParallelTreeExample.vcxproj  main.cpp
(+4 files in other folders)
